# agent-4.0

./: PHASE-1-VALIDATION-CHECKLIST.md  opus.md  roadmap.md
agent/: phase-1-model-engine.py  phase_0_recorder.py  phase_2_belief_replacement.py  phase_3_language_framework_engine.py  phase_4_guarantee_validator.py  phase_minus_1_executor.py
logs/belief_replacements/: belief_0_1775062828.825712.json  belief_0_1775062839.352365.json  belief_0_1775063404.673346.json  (+3 more)
reference/LocalMind-master/: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  nginx.conf  pyproject.toml  start.ps1
reference/LocalMind-master/backend/: __init__.py  config.py  main.py  migrate.py
reference/LocalMind-master/backend/db/: __init__.py  database.py  models.py
reference/LocalMind-master/backend/routers/: __init__.py  chat.py  documents.py  finetune.py  models.py  upload.py
reference/LocalMind-master/backend/services/: __init__.py  chunker.py  embedder.py  finetuner.py  llm_client.py  rag_engine.py  vector_store.py
reference/LocalMind-master/backend/services/parsers/: __init__.py  excel_parser.py  image_parser.py  pdf_parser.py  pptx_parser.py  text_parser.py  utils.py  word_parser.py
reference/LocalMind-master/backend/utils/: __init__.py  hardware.py
reference/LocalMind-master/frontend/: index.html  package-lock.json  package.json
reference/LocalMind-master/frontend/src/: App.jsx
reference/LocalMind-master/frontend/src/api/: client.js
reference/LocalMind-master/frontend/src/components/: BackendStatus.jsx  ChatInterface.jsx  DocumentList.jsx  DocumentUpload.jsx  FineTunePanel.jsx  HardwareBanner.jsx  ModelSelector.jsx
(+26 files in other folders)
